# cebu

./: .gitignore  CMakeLists.txt  README.md  test_core.cpp  test_core_cmake.txt  test_core_cmake_minimal.txt
docs/: absurdity_system.md  api.md  api_advanced_serialization.md  api_spatial_index.md  architecture.md  equivalence_classes.md  faq.md  getting_started.md  index.md  performance.md  phase9_absurdity_overview.md  phase9c_narrative_context.md  spatial_indexing.md  topology_operations.md
examples/: event_system_basic.cpp  persistence_basic.cpp  phase7b_demo.cpp  phase8a_demo.cpp  phase8c_demo.cpp  phase8d_benchmark.cpp  phase9a_demo.cpp  phase9a_minimal_test.cpp  phase9b_demo.cpp  phase9c_demo.cpp  refinement_basic.cpp
include/cebu/: absurdity.h  benchmark.h  bvh.h  change_tracker.h  command_history.h  common.h  compression.h  equivalence_classes.h  event_system.h  json_serialization.h  label.h  narrative_context.h  octree.h  parallel_executor.h  persistence.h  profiler.h  refinement.h  serialization.h  simplex.h  simplicial_complex.h  simplicial_complex_labeled.h  simplicial_complex_labeled_events.h  simplicial_complex_narrative.h  simplicial_complex_non_hausdorff.h  snapshot_manager.h  spatial_index.h  story_event.h  streaming_io.h  timeline.h  topology_morph.h  topology_operations.h  version_control.h  vertex_geometry.h
src/: absurdity.cpp  benchmark.cpp  bvh.cpp  change_tracker.cpp  compression.cpp  equivalence_classes.cpp  event_system.cpp  json_serialization.cpp  narrative_context.cpp  octree.cpp  parallel_executor.cpp  persistence.cpp  profiler.cpp  refinement.cpp  simplex.cpp  simplicial_complex.cpp  simplicial_complex_non_hausdorff.cpp  snapshot_manager.cpp  spatial_index.cpp  streaming_io.cpp  topology_morph.cpp  version_control.cpp  vertex_geometry.cpp
test_core_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cebu.slnx  cebu_core.vcxproj  cebu_core.vcxproj.filters  phase8c_demo.vcxproj  phase8c_demo.vcxproj.filters  phase8d_benchmark.vcxproj  phase8d_benchmark.vcxproj.filters  phase9a_demo.vcxproj  phase9a_demo.vcxproj.filters  phase9a_minimal_test.vcxproj  phase9a_minimal_test.vcxproj.filters  phase9b_demo.vcxproj  phase9b_demo.vcxproj.filters  phase9c_demo.vcxproj  phase9c_demo.vcxproj.filters  test_basic.vcxproj  test_basic.vcxproj.filters  test_binary_serialization.vcxproj  test_binary_serialization.vcxproj.filters  test_bvh.vcxproj  test_bvh.vcxproj.filters  test_bvh_compilation.vcxproj  test_bvh_compilation.vcxproj.filters  test_change_tracker.vcxproj  test_change_tracker.vcxproj.filters  test_command_history.vcxproj  test_command_history.vcxproj.filters  test_compression.vcxproj  test_compression.vcxproj.filters  test_dynamic.vcxproj  test_dynamic.vcxproj.filters  test_equivalence_classes.vcxproj  test_equivalence_classes.vcxproj.filters  test_event_system.vcxproj  (+47 more)
test_core_build/cebu_core.dir/Release/cebu_core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
test_core_build/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
test_core_build/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
tests/: test_basic.cpp  test_binary_serialization.cpp  test_bvh.cpp  test_bvh_compilation.cpp  test_change_tracker.cpp  test_command_history.cpp  test_compression.cpp  test_dynamic.cpp  test_equivalence_classes.cpp  test_event_system.cpp  test_json_serialization.cpp  test_labels.cpp  test_minimal_bvh.cpp  test_narrative.cpp  test_non_hausdorff.cpp  test_non_hausdorff_serialization.cpp  test_octree.cpp  test_octree_compilation.cpp  test_parallel_executor.cpp  test_persistence.cpp  test_phase9a_absurdity.cpp  test_phase9b_morph.cpp  test_phase9c_narrative.cpp  test_refinement.cpp  test_serialization.cpp  test_snapshot_manager.cpp  test_spatial_index.cpp  test_story_events.cpp  test_streaming_io.cpp  test_timeline.cpp  test_topology_ops.cpp  test_topology_ops_advanced.cpp  test_version_control.cpp  test_vertex_geometry.cpp  test_vertex_geometry_compilation.cpp
